workshop/bookinfo/1.0/bookinfo/oidc/requestauth.yaml
#apiVersion: security.istio.io/v1
#kind: RequestAuthentication
#metadata:
#  name: productpage-jwt
#  namespace: bookinfo
#spec:
#  targetRefs:
#  - kind: Service
#    group: ""
#    name: productpage
#  jwtRules:
#  - issuer: "https://keycloak.apps.snoaxolab.axodevelopment.dev/realms/workshop"
#    jwksUri: "https://keycloak.apps.snoaxolab.axodevelopment.dev/realms/workshop/protocol/openid-connect/certs"
#    audiences:
#    - bookinfo
#    forwardOriginalToken: true

# jwks is just json at the certs url above
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: productpage-jwt
  namespace: bookinfo
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: productpage
  jwtRules:
  - issuer: "https://keycloak.apps.snoaxolab.axodevelopment.dev/realms/workshop"
    jwks: '{"keys":[{"kid":"BqKZc8tzRacFZBGGS9PLdFHQfVIqVrwZ6BNnU3a06XM","kty":"RSA","alg":"RS256","use":"sig","x5c":["MIICnzCCAYcCBgGdCMRkXTANBgkqhkiG9w0BAQsFADATMREwDwYDVQQDDAh3b3Jrc2hvcDAeFw0yNjAzMjAwMTAxMjFaFw0zNjAzMjAwMTAzMDFaMBMxETAPBgNVBAMMCHdvcmtzaG9wMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA22WA+zu7shgVxzv626knzMYN5GVbACjOzNZ1si2gKngvRkZK+1FyQYYU/Z3dfcY2TsPgPd6JzMRP1GtH2fnXKkAxQLAvm6pkAAt5Gqu3j4BPxORyUOmEdntu6lYjOsfMnsUCsQNipL9ObUvTcv/FIIWstsAyeNVoNir1c0u6BBF2p9jDpxAi6HllVy1UFlihwpi8P [...]
    audiences:
    - bookinfo
    forwardOriginalToken: true
