workshop/bookinfo/1.0/bookinfo/oidc/authpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: productpage-allow-dev
  namespace: bookinfo
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: productpage
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[groups]
      values: ["/dev"]
---
# TODO: can prob remove
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: productpage-deny-unauthenticated
  namespace: bookinfo
spec:
  targetRefs:
  - kind: Service
    group: ""
    name: productpage
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
